iac/week-4/demo-7/deploy/department1/team1/cvm/.terragrunt-cache/h-bKEa-GDy_8_XTE5RhX1mq7cZY/FLuUg-7BF-jovOpqhB6X4_zwHJ4/iac/week-2/demo-app-2/k8s-specifications/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - image: postgres:15-alpine
          name: postgres
          # for pg_isready command use the following
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          readinessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - $POSTGRES_USER
                - -d
                - $POSTGRES_USER
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - $POSTGRES_USER
                - -d
                - $POSTGRES_USER
            initialDelaySeconds: 15
            periodSeconds: 20
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: db-data
      volumes:
        - name: db-data
          emptyDir: {}
